# tradesee

./: .gitignore  Anchor.toml  Cargo.toml  README-UI.md  README.md  anchor.toml  check_versions.sh  package-lock.json  package.json  setup.sh  tsconfig.json
app/: env.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
app/scripts/: test-solana-pay.js
app/src/components/: AccountBalanceCard.tsx  ContractDetailModal.tsx  ContractList.tsx  CreateContractForm.tsx  CreateContractModal.tsx  DepositPayinButton.tsx  DocumentAnchoring.tsx  ProfileModal.tsx  WalletConnect.tsx
app/src/lib/: anchor.ts  utils.ts
app/src/lib/idl/: tradesee_escrow.ts
app/src/lib/sdk/: client.ts
app/src/pages/: index.tsx
app/src/styles/: globals.css
programs/tradesee_escrow/: Cargo.toml
programs/tradesee_escrow/src/: lib.rs
scripts/: create-devnet-mint.ts  devnet-e2e-check.ts  devnet-real-e2e.ts  local-usdc-mint.ts
tests/: escrow.test.ts
tests/sdk/: client.ts  types.ts
ts/: env.example  package-lock.json  package.json
ts/sdk/: client.ts  utils.ts
ts/tests/: escrow.test.ts
