[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl  = "0.31.1"
solana-sdk = "=1.18.20"
solana-zk-token-sdk = "=1.18.20"

# SPL crates
spl-token = { version = "4.0.2", features = ["no-entrypoint"] }
spl-memo  = { version = "4.0.0", features = ["no-entrypoint"] }
